@@ -1,3 +1,11 @@
+2008-08-06  Johan Dahlin  <johan@flumotion.com>
+
+	* flumotion/ui/wizard.py:
+	Remove some internal validation checks which are no longer valid,
+	which makes the wizard behave properly even when you do extensive
+	back/forward:ing.
+	Fixes #1048.
+
 2008-08-05  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/common/documentation.py:
